# OpenGLEngine

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/entities/: entity.h  square.h  triangle.h
include/physics/: dynamic_body.h  pose.h  world.h
include/rendering/: entity_resources.h  glfw_ancillary.h  mesh.h  mesh_forward.h  mesh_resources.h  scene.h  shader.h  translation.h
include/rendering/scene/: scene_abstract.h  scene_layered.h  scene_ordered_layer.h
include/scene/: scene_abstract.h  scene_layered.h  scene_ordered_layer.h
lib/rendering/: CMakeLists.txt
lib/rendering/include/: entity_resources.h  glfw_ancillary.h  mesh.h  mesh_forward.h  pose.h  shader.h  translation.h
lib/rendering/src/: glfw_ancillary.cpp  shader.cpp
src/: main.cpp
src/entities/: entity.cpp  square.cpp  triangle.cpp
src/physics/: dynamic_body.cpp  world.cpp
src/rendering/: glfw_ancillary.cpp  mesh.cpp  scene.cpp  shader.cpp
src/shaders/: fragment_shader_square.shader  fragment_shader_triangle.shader  fragment_shader_triangle_uniform.shader  vertex_shader.shader  vertex_shader_translation_uniform.shader
testing/: CMakeLists.txt
testing/rendering/: test_rendering.cpp
testing/src/: test_physics.cpp  test_rendering.cpp  test_scene.cpp
